@@ -1,0 +1,45 @@
+PREHOOK: query: drop table tst_src1
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: drop table tst_src1
+POSTHOOK: type: DROPTABLE
+PREHOOK: query: create table tst_src1 like src1
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: create table tst_src1 like src1
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@tst_src1
+PREHOOK: query: load data local inpath '../data/files/kv1.txt' into table tst_src1
+PREHOOK: type: LOAD
+POSTHOOK: query: load data local inpath '../data/files/kv1.txt' into table tst_src1
+POSTHOOK: type: LOAD
+POSTHOOK: Output: default@tst_src1
+PREHOOK: query: select count(1) from tst_src1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@tst_src1
+PREHOOK: Output: file:/tmp/kirk/hive_2010-10-13_23-38-37_796_1122842389749817180/-mr-10000
+POSTHOOK: query: select count(1) from tst_src1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@tst_src1
+POSTHOOK: Output: file:/tmp/kirk/hive_2010-10-13_23-38-37_796_1122842389749817180/-mr-10000
+500
+PREHOOK: query: load data local inpath '../data/files/kv1.txt' into table tst_src1
+PREHOOK: type: LOAD
+POSTHOOK: query: load data local inpath '../data/files/kv1.txt' into table tst_src1
+POSTHOOK: type: LOAD
+POSTHOOK: Output: default@tst_src1
+PREHOOK: query: select count(1) from tst_src1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@tst_src1
+PREHOOK: Output: file:/tmp/kirk/hive_2010-10-13_23-38-40_764_2860500961795681259/-mr-10000
+POSTHOOK: query: select count(1) from tst_src1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@tst_src1
+POSTHOOK: Output: file:/tmp/kirk/hive_2010-10-13_23-38-40_764_2860500961795681259/-mr-10000
+1000
+PREHOOK: query: drop table tst_src1
+PREHOOK: type: DROPTABLE
+PREHOOK: Input: default@tst_src1
+PREHOOK: Output: default@tst_src1
+POSTHOOK: query: drop table tst_src1
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Input: default@tst_src1
+POSTHOOK: Output: default@tst_src1
